welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: ')' expected but ';' found.
	avance(nbpas=nbpas+1;)
                            ^Variables:4: error: illegal start of statement
	avance(nbpas=nbpas+1;)
                             ^